fix letter spacing

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -37,7 +37,7 @@ h2 {
     font-size: 40px;
     font-weight: 700;
     line-height: 1.2;
-    letter-spacing: -0.05em;
+    letter-spacing: -0.02em;
 }
 
 .section {
